feat: add support for --enable-preview
Why:

 * --enable-preview is a common flag to enable preview features in Java 9 and up
    but is hard to use with jbang as it is not passed on to the java,javac
    and jshell command when running a script.
 * workaround thus far been to pass -C=--enable-preview and -R=--enable-preview
    but that does not work for jshell

This change addreses the need by:

 * introducing `--enable-preview` flag to jbang which will pass it on to
    java, javac and jshell as appropriate
 * `//PREVIEW` in source files is possible
 * aliases can specify enable preview too.

Fixes #1622